# OpenMultiTracker

./: .gitignore  CMakeLists.txt  HockeyPlayersRecognizer  LICENSE  README.md  RegionChooser.cpp  RegionChooser.h  RinkBackgroundSubtractor.cpp  RinkBackgroundSubtractor.h  VideoHandler.cpp  VideoHandler.h  libbgs.dylib  main.cpp
Detector/: MovingObjectDetector.cpp  MovingObjectDetector.h
Developing/: AssignmentsTable.cpp  AssignmentsTable.h  DataAssociationAlgorithm.cpp  DataAssociationAlgorithm.h  MotionModel.cpp  MotionModel.h  ObjectState.cpp  ObjectState.h  OcclusionHandler.cpp  OcclusionHandler.h  Track.cpp  Track.h  Tracker.cpp  Tracker.h
Utils/: OcclusionHandler.cpp  OcclusionHandler.h  RegionChooser.cpp  defines.h
bgslibrary/package_bgs/: GMG.h  IBGS.h  MixtureOfGaussianV1BGS.h
bgslibrary/package_bgs/dp/: PratiMediodBGS.h
bgslibrary/package_bgs/sjn/: SJN_MultiCueBGS.h
